added submitted owens page!

--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -22,6 +22,14 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">Primary Owen</a>
             </div>
+            <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/submitted_owens">
+                            <span class="glyphicon glyphicon-th-list"></span>
+                            Submitted Owens
+                        </a>
+                    </li>
+            </ul>
         </div>
     </nav>
 {% endblock %}
