added times and edited the navbar with changes

--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -26,7 +26,7 @@
                     <li>
                         <a href="/submitted_owens">
                             <span class="glyphicon glyphicon-th-list"></span>
-                            Submitted Owens
+                            Submitted Changes
                         </a>
                     </li>
             </ul>
