--- a/primaryOwenTracker/templates/submitted_owens.html
+++ b/primaryOwenTracker/templates/submitted_owens.html
@@ -4,9 +4,12 @@
 {% for owen in submitted_owens %}
       <div class="panel panel-primary">
                 <div class="panel-body">
-                    {{ owen.username }} <b>- {{ owen.victory }}</b>
+                   <b> {{ owen.username }}</b> - {{ owen.victory }}
                 </div>
+                <div class="panel-footer">
+                    {{ owen.time }}
+                </div>
+                
             </div>
 {% endfor %}
-    
 {% endblock %}
