--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -11,7 +11,6 @@
 
     
    <div class = "panel-body">
-   <div class = "col col-lg-2">
     
 <script>
 $(document).ready(function(){
@@ -27,13 +26,12 @@ $(document).ready(function(){
 </script>
 
     
-    <img alt="Mountain View" id="owen_image">
-   </div>
     
       <center>
       <div class = "winner-body">
       <div class = "col-md-auto">
-         <h1>
+         <img alt="Primary Owen Photo" id="owen_image">
+	 <h1>
             <center>
             <p id="current_owen"></p>
             </center>
@@ -49,13 +47,13 @@ $(document).ready(function(){
 
    <div class = "panel panel-primary">
       <div class = "panel-heading" style="color: #ffffff">
-           submit a change
+           Submit a Change
       </div>
       <div class = "panel-body">
         <center>
          <a href="/submission">
             <h1>
-            submit a change in the primary owen
+            Submit a change in the Primary Owen
             </h1>
          </a>
         </center>
