--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -9,7 +9,7 @@
 <div class = "panel panel-primary">
    <div class = "panel-heading">
       <a style="color: #ffffff">
-    Who do you believe the primary owen is??
+    Who do you believe the Primary Owen is??
       </a>
    </div>
    <div class = "panel-body">
