--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -11,7 +11,6 @@
 
     
    <div class = "panel-body">
-   <div class = "col col-lg-2">
     
 <script>
 $(document).ready(function(){
@@ -26,11 +25,9 @@ $(document).ready(function(){
 
 </script>
 
+<center> 
+    <img alt="Primary Owen Photo" id="owen_image">
     
-    <img alt="Mountain View" id="owen_image">
-   </div>
-    
-      <center>
       <div class = "winner-body">
       <div class = "col-md-auto">
          <h1>
@@ -49,13 +46,13 @@ $(document).ready(function(){
 
    <div class = "panel panel-primary">
       <div class = "panel-heading" style="color: #ffffff">
-           submit a change
+           Submit a Change
       </div>
       <div class = "panel-body">
         <center>
          <a href="/submission">
             <h1>
-            submit a change in the primary owen
+            Submit a change in the Primary Owen
             </h1>
          </a>
         </center>
