--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -9,7 +9,7 @@
 <div class = "panel panel-primary">
    <div class = "panel-heading">
       <a style="color: #ffffff">
-    who do you believe the primary owen is??
+    Who do you believe the Primary Owen is?
       </a>
    </div>
    <div class = "panel-body">
@@ -19,12 +19,12 @@
           <input type="text" class="form-control"
             id="username"
             name="username"
-            placeholder="username of owen">
+            placeholder="Username of Owen">
           <br>
           <input type="text" class="form-control"
             id="victory"
             name="victory"
-            placeholder="describe the victory">
+            placeholder="Describe the victory">
           <br>
           <input type="submit" class="form-control btn btn-defaul"
                 value = "Submit">
