initial attempts; not tested

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -17,6 +17,11 @@
    <form id="put_owen" action="/add_owen" method="POST">
           <div class = "inner-panel-body text-center">
           <input type="text" class="form-control"
+            id="submitter"
+            name="submitter"
+            placeholder="username of submitter">
+          <br>
+          <input type="text" class="form-control"
             id="username"
             name="username"
             placeholder="username of owen">
