--- a/primaryOwenTracker/templates/submitted_owens.html
+++ b/primaryOwenTracker/templates/submitted_owens.html
@@ -5,6 +5,7 @@
       <div class="panel panel-primary">
                 <div class="panel-body">
                    <b> {{ owen.username }}</b> - {{ owen.victory }}
+                   <p>submitted by: {{ owen.submitter }}</p> 
                 </div>
                 <div class="panel-footer">
                     {{ owen.time }}
