--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -47,6 +47,7 @@
             'username'              : $('input[name=username]').val(),
             'victory'               : $('input[name=victory]').val(),
             'time'                  : String(today),
+			'submitter'             : $('input[name=submitter]').val(),
         };
     
             $.ajax({
