--- a/primaryOwenTracker/templates/elements/nav.html
+++ b/primaryOwenTracker/templates/elements/nav.html
@@ -6,18 +6,16 @@
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-          {% if info.uid == 'wgahnagl' %}
-              <a class="nav-link" href="{{ url_for("admin") }}">Admin</a>
-          {% endif %}
-              <a class="nav-link" href="{{ url_for("main") }}">Home</a>
-              <a class="nav-link" href="{{ url_for("submit") }}">submit</a>
-      </li>
+      {% if info.uid == 'wgahnagl' %}
+          <a class="nav-link" href="{{ url_for("admin") }}">Admin</a>
+      {% endif %}
+        <a class="nav-link" href="{{ url_for("main") }}">Home</a>
+        <a class="nav-link" href="{{ url_for("submit") }}">Submit</a>
     </ul>
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item navbar-user dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="user01">
-          <img src="https://profiles.csh.rit.edu/image/test">
+          <img src="https://profiles.csh.rit.edu/image/{{ info.uid }}">
             {{ info.uid }}
           <span class="caret"></span>
         </a>
