--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -4,21 +4,29 @@
         <div class="card mb-3">
             <h3 class="card-header">Primary Owen</h3>
             <div class="card-body">
-
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-2 col-xs-6">
+                        <div class="col owen_image" style="text-align: center">
                             <div class="ratio img-responsive img-circle"
                                  style="background-image: url(https://profiles.csh.rit.edu/image/euler);"></div>
+                        <h2 id="eulerScore" style="padding-top: 10px">0</h2>
                         </div>
-                        <div class="col-sm-8 col-xs-12" style="text-align: center;">
-                            F I G H T
+                        <div class="col" style="text-align: center">
+                            <img src="../static/img/VERSUS.png" class="versus">
                         </div>
-                        <div class="col-sm-2 col-xs-6">
+                        <div class="col owen_image" style="text-align: center">
                             <div class="ratio img-responsive img-circle"
                                  style="background-image: url(https://profiles.csh.rit.edu/image/owen);"></div>
+                        <h2 id="owenScore" style="padding-top: 10px">0</h2>
                         </div>
 
+                    </div>
+                    <div class="row" style="padding-top: 10px">
+                        <div class="col">
+                            <div class="w3-orange w3-large">
+                                <div class="w3-container w3-blue" style="width:50%; height: 10px"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
